Fix --use-gl=desktop for Windows.

New methods were added to SurfaceGL with default implementations containing UNIMPLEMENTEDs but the GLSurfaceWGL classes were not updated.

BUG=614787

Review-Url: https://codereview.chromium.org/2012803003
Cr-Commit-Position: refs/heads/master@{#396001}

Former-commit-id: 5ab7b65e8de91e56da67a1ed960c5eb509bf8053