ui/gl/gl_surface_wgl.h
@@ -39,6 +39,10 @@ class NativeViewGLSurfaceWGL : public GLSurfaceWGL {
   // Implement GLSurface.
   bool Initialize(GLSurface::Format format) override;
   void Destroy() override;
+  bool Resize(const gfx::Size& size,
+              float scale_factor,
+              bool has_alpha) override;
+  bool Recreate() override;
   bool IsOffscreen() override;
   gfx::SwapResult SwapBuffers() override;
   gfx::Size GetSize() override;
@@ -46,6 +50,8 @@ class NativeViewGLSurfaceWGL : public GLSurfaceWGL {
 
  private:
   ~NativeViewGLSurfaceWGL() override;
+
+  GLSurface::Format format_ = GLSurface::SURFACE_DEFAULT;
 
   gfx::AcceleratedWidget window_;
   gfx::AcceleratedWidget child_window_;
